# (r1991-r1994,r1998-r1999,r2046,r2053-r2070,r2072)
 * Documentation and self-documentation improvements
# (r2039)
 * Experimental support for reading QOI files via libqoi
# (r1990,r2000,r2004)
 * Experimental support for reading AVIF images via libavif
# (r1989)
 * Experimental support for reading WebP images via libwebp
# (r1988)
 * FIM requires a compiler supporting at least C++11
# (r2002-r2003,r2047-r2053,r2056-r2071)
 * More tests
# (r2048)
 * Searches via '/' or '?' are now replayable via "recording 'repeat_last'"
# (r2003)
 * Enable descriptions to be searched in "goto /PATTERN/" by keeping the newly introduced 'D' in _re_search_opts
# (r2042)
 * -o sdl  with SDL2: reduce chance of intercepting Tab during window switch
# (r2043)
 * bugfix: avoid terminal clutter after interruption of "endless_slideshow"
# (r2071)
 * Configure fixes (remove bashisms by SDL version recognition)

                Version 0.6-rc2

# (r1983)
 * File dropping support in SDL2 mode and more responsive readline mode

                Version 0.6-rc1

# (r1979-r1982)
 * Experimental support for SDL2.

                Version 0.6-rc0

A summary of major improvements:

 * Colour ASCII-Art output via libcaca, selected with -o ca
 * better mechanism to determine best output device
 * font magnification by integer factors, good for higher resolutions
 * runtime font selection
 * new options to commands "scale", "goto", "limit", "list", ...
 * 'limit' view to relevant image files based on properties (like in 'mutt')
 * pass key presses to be automated at startup with -k and -K options
 * pretty free from memory leaks
 * -X switch inhibits custom external converters
 * new powerful subcommand "list 'mark'"
 * new command-line switches (--sort..) to sort the initial files list
 * use mipmaps for faster scaling
 * open files from a files list with -L
 * load image description files with -D 
 * background recursive scan and load of files with -B