@@ -191,6 +191,9 @@ endif
 	test "`SSH_TTY=1       $(NO_ASAN) $(FIM_EXE) $(FIMNORCOPTS) $(top_srcdir)/media/                     -c 'stderr _device_string' -kq   2>&1 > /dev/null`" = $(FIM_USE_ASCII_ART_DEFAULT) #
 	test "`(unset SSH_TTY; $(NO_ASAN) $(FIM_EXE) $(FIMNORCOPTS) $(top_srcdir)/media/ -t --no-framebuffer -c 'stderr _device_string' -kq ) 2>&1 > /dev/null`" = $(FIM_USE_ASCII_ART_DEFAULT) #
 	test "`(      SSH_TTY= $(NO_ASAN) $(FIM_EXE) $(FIMNORCOPTS) $(top_srcdir)/media/ -t --no-framebuffer -c 'stderr _device_string' -kq ) 2>&1 > /dev/null`" = $(FIM_USE_ASCII_ART_DEFAULT) #
+if ENABLE_GIF
+	test `SSH_TTY=1 $(NO_ASAN) $(FIM_EXE) -q $(FIMNORCOPTS) $(top_srcdir)/media/icon_smile.gif -c 'if(i:swidth<i:sheight){stderr i:swidth!=_screen_width;}else{stderr i:sheight!=_screen_height;}' -kq 2>&1 > /dev/null` = 0
+endif
 
 
 .PHONY: gtktests
